--- a/GPT2_surprisal.ipynb
+++ b/GPT2_surprisal.ipynb
@@ -11,23 +11,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "FrEPa02GL3dv"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pandas'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m \u001b[39mimport\u001b[39;00m tqdm\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "import torch.nn as F\n",
@@ -49,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -58,26 +46,13 @@
         "id": "xgKjYsg_MGDY",
         "outputId": "df97c109-0043-48a4-85cf-c4204d1e3168"
       },
-      "outputs": [
-        {
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-9b8f1e901c7a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_word_tokens\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"individual_words_n_4148.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtraining_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'training.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcleaned_test_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_test_set_from_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-3-99c8d0a13dd6>\u001b[0m in \u001b[0;36mload_word_tokens\u001b[0;34m(file_path)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_word_tokens\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mwords_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwords_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mwords_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'individual_words_n_4148.txt'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from utils import load_word_tokens, load_dataset\n",
+        "from utils import load_word_tokens, load_dataset, build_test_set_from_words\n",
         "\n",
-        "words = load_word_tokens(\"individual_words_n_4148.txt\")\n",
-        "training_data = load_dataset('training.txt')\n",
-        "test_data = load_dataset('test.txt')\n",
+        "words = load_word_tokens(\"dataset/individual_words_n_4148.txt\")\n",
+        "training_data = load_dataset('dataset/training.txt')\n",
+        "test_data = load_dataset('dataset/test.txt')\n",
         "\n",
         "cleaned_test_data = build_test_set_from_words(words, test_data)\n",
         "word_types = sorted(list(set(words)))"
@@ -116,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -197,12 +172,35 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a86fc543ef5e43b7b6848317770970f5",
+              "model_id": "bdbafa4a8f464022b21568a6dbb88447",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Downloading:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+              "Downloading (…)okenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Sadeghi\\miniconda3\\envs\\torch-gpu\\lib\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Sadeghi\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+            "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+            "  warnings.warn(message)\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "347cfc4644e646e8babf7443bd9f2a31",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading (…)lve/main/config.json:   0%|          | 0.00/1.33k [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -211,12 +209,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4c87b3fe25754c7fa711a894f3462ac7",
+              "model_id": "f5023f392d994913ac2d97c5ea87bc9f",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Downloading:   0%|          | 0.00/1.30k [00:00<?, ?B/s]"
+              "Downloading (…)ve/main/spiece.model:   0%|          | 0.00/537k [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -225,12 +223,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ce69c69fb8e24b5d93b8a4addb3f79a9",
+              "model_id": "59eff542236040f7aa4b2f2fba0cad20",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Downloading:   0%|          | 0.00/524k [00:00<?, ?B/s]"
+              "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/1.13M [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -239,26 +237,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "61d1034bd8ff455baa574b476a103f29",
+              "model_id": "a11993f8c4fd40ebb602b5f4fb706b71",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Downloading:   0%|          | 0.00/1.08M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f718c7da243e44febe7578e88b833282",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading:   0%|          | 0.00/399 [00:00<?, ?B/s]"
+              "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/399 [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -274,16 +258,24 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1543e76b455949d5aad03ff6b58deb7c",
+              "model_id": "587c06b8bea54bf9b0f9c9e0eae379f3",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "Downloading:   0%|          | 0.00/1.22G [00:00<?, ?B/s]"
+              "Downloading pytorch_model.bin:   0%|          | 0.00/1.31G [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
           "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
+            "pip install xformers.\n"
+          ]
         }
       ],
       "source": [
@@ -296,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -311,10 +303,8 @@
               "tensor([62, 51, 95, 57, 46, 49, 50, 48, 45, 53])"
             ]
           },
-          "execution_count": 7,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 8,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -329,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -344,10 +334,8 @@
               "{'input_ids': [5, 1490, 3], 'token_type_ids': [0, 0, 0], 'attention_mask': [1, 1, 1]}"
             ]
           },
-          "execution_count": 8,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 9,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -357,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,13 +358,11 @@
           "data": {
             "text/plain": [
               "tensor([0.0124, 0.0164, 0.0189, 0.0354, 0.0400, 0.0431, 0.0521, 0.0837, 0.1379,\n",
-              "        0.1632], grad_fn=<SliceBackward>)"
+              "        0.1632], grad_fn=<SliceBackward0>)"
             ]
           },
-          "execution_count": 9,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 10,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
