--- a/GPT2_surprisal.ipynb
+++ b/GPT2_surprisal.ipynb
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -300,10 +300,10 @@
         {
           "data": {
             "text/plain": [
-              "tensor([62, 51, 95, 57, 46, 49, 50, 48, 45, 53])"
+              "tensor([   40, 24924,    27,  ...,   313,    43,    48])"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -314,7 +314,7 @@
         "input_ids = inputs['input_ids']\n",
         "attention_mask = inputs['attention_mask']\n",
         "out = model(input_ids, attention_mask=attention_mask)\n",
-        "torch.argsort(out['logits'], 2)[0][2][-10:]"
+        "torch.argsort(out['logits'], 2)[0][-1]"
       ]
     },
     {
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -386,13 +386,11 @@
         {
           "data": {
             "text/plain": [
-              "tensor(4.6699, grad_fn=<SelectBackward>)"
+              "tensor(4.6699, grad_fn=<SelectBackward0>)"
             ]
           },
-          "execution_count": 10,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 16,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -402,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,18 +412,16 @@
         {
           "data": {
             "text/plain": [
-              "['▁و']"
+              "['[RES14]']"
             ]
           },
-          "execution_count": 11,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 21,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "tokenizer.convert_ids_to_tokens([45])"
+        "tokenizer.convert_ids_to_tokens([40])"
       ]
     },
     {
@@ -801,7 +797,7 @@
         }
       ],
       "source": [
-        "save_df_to_csv(cleaned_test_data, probs, entropy_list, surprisal_list, file_path = './word_list_with_evaluation_v2.csv')"
+        "df_to_csv(cleaned_test_data, probs, entropy_list, surprisal_list, file_path = './word_list_with_evaluation_v2.csv')"
       ]
     },
     {
@@ -976,7 +972,7 @@
         }
       ],
       "source": [
-        "save_df_to_csv2(cleaned_test_data, probs, entropy_list, surprisal_list, file_path = './evaluation_without_alignment_v2.csv')"
+        "df_to_csv2(cleaned_test_data, probs, entropy_list, surprisal_list, file_path = './evaluation_without_alignment_v2.csv')"
       ]
     }
   ],
