--- a/GPT2_surprisal.ipynb
+++ b/GPT2_surprisal.ipynb
@@ -45,7 +45,7 @@
       "outputs": [],
       "source": [
         "words = load_word_tokens(\"data/individual_words_n_4148.txt\")\n",
-        "training_data = load_dataset('data/training.txt')\n",
+        "# training_data = load_dataset('data/training.txt')\n",
         "test_data = load_dataset('data/test.txt')\n",
         "\n",
         "cleaned_test_data = build_test_set_from_words(words, test_data)\n",
